crates/qwik-optimizer-oxc/tests/snapshots/should_wrap_prop_from_destructured_array.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore, useTask$ } from "@qwik.dev/core";
import { useForm, useForm2 } from "./some-file.ts";

export const Input = component$<{ error: string; error2: string; error3: string }>((props) => {
  useTask$(({ track }) => {
    track(() => props.error);
    track(() => props.error2);
    track(() => props.error3);
  });

  return <></>;
});

export default component$(() => {
  const [store, math] = [useStore({ errors: {} }), Math.random()];
  const [[store2]] = [[useStore({ errors: {} })]];
  const { store3, math4 } = { store3: useStore({ errors: {} }), math4: Math.random() };
  const math2 = [Math.random()];
  const { math3 } = { math3: Math.random() };
  const [store4] = useForm();
  const { store5 } = useForm2();

  return (
    <div>
      <button
        onClick$={() => {
          store.errors.test = store.errors.test ? undefined : "ERROR TEST";
        }}
      >
        click
      </button>
      <Input
        error={store.errors.test}
        error2={store2.errors.test}
        error3={store3.errors.test}
        error4={store4.errors.test}
        error5={store5.errors.test}
        math={math}
        math2={math2}
        math3={math3}
        math4={math4}
      />
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Input_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export const Input = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Input_component_XXXXXXXXXXXX"),
);
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);

=== test.tsx_Input_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Input_component_useTask_XXXXXXXXXXXX");
export const Input_component_XXXXXXXXXXXX = (props) => {
  useTaskQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Input_component_useTask_XXXXXXXXXXXX", [props]));
  return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, null, 3, "u6_0");
};

/*
{
  "origin": "test.tsx",
  "name": "Input_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Input_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Input_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== test.tsx_Input_component_useTask_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const Input_component_useTask_XXXXXXXXXXXX = ({ track }) => {
  const props = _captures[0];
  track(() => props.error);
  track(() => props.error2);
  track(() => props.error3);
};

/*
{
  "origin": "test.tsx",
  "name": "Input_component_useTask_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Input_component_useTask",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Input_component_useTask_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Input_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "paramNames": [
    "{track}"
  ],
  "captureNames": [
    "props"
  ]
}
*/

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { Input } from "./test";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useForm } from "./some-file.ts";
import { useForm2 } from "./some-file.ts";
import { useStore } from "@qwik.dev/core";
const _hf0 = (p0) => p0.errors.test;
const _hf0_str = "p0.errors.test";
const _hf1 = (p0) => p0.store5.errors.test;
const _hf1_str = "p0.store5.errors.test";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_div_button_q_e_click_XXXXXXXXXXXX");
export const test_component_XXXXXXXXXXXX = () => {
  const [store, math] = [
    useStore({
      errors: {},
    }),
    Math.random(),
  ];
  const [[store2]] = [
    [
      useStore({
        errors: {},
      }),
    ],
  ];
  const { store3, math4 } = {
    store3: useStore({
      errors: {},
    }),
    math4: Math.random(),
  };
  const math2 = [Math.random()];
  const { math3 } = {
    math3: Math.random(),
  };
  const [store4] = useForm();
  const form2 = useForm2();
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(
        "button",
        null,
        {
          "q-e:click": /* @__PURE__ */ qrl(
            i_XXXXXXXXXXXX,
            "test_component_div_button_q_e_click_XXXXXXXXXXXX",
            [store],
          ),
        },
        "click",
        3,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        Input,
        {
          math: math,
          math2: math2,
          math3: math3,
          math4: math4,
        },
        {
          error: _fnSignal(_hf0, [store], _hf0_str),
          error2: _fnSignal(_hf0, [store2], _hf0_str),
          error3: _fnSignal(_hf0, [store3], _hf0_str),
          error4: _fnSignal(_hf0, [store4], _hf0_str),
          error5: _fnSignal(_hf1, [form2], _hf1_str),
        },
        null,
        3,
        "u6_1",
      ),
    ],
    1,
    "u6_2",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_test_component_div_button_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const test_component_div_button_q_e_click_XXXXXXXXXXXX = () => {
  const store = _captures[0];
  store.errors.test = store.errors.test ? undefined : "ERROR TEST";
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_div_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component_div_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_div_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "store"
  ]
}
*/

=== DIAGNOSTICS ===

[]
