crates/qwik-optimizer-oxc/tests/snapshots/should_wrap_store_expression.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export default component$(() => {
  const panelStore = useStore(() => ({
    active: "Input",
    list: PANELS,
  }));

  return (
    <div
      stuff={panelStore.active ? "yes" : "no"}
      class={{
        "too-long-to-wrap": true,
        "examples-panel-input": panelStore.active === "Input",
        "examples-panel-output": panelStore.active === "Output",
        "examples-panel-console": panelStore.active === "Console",
      }}
    />
  );
});
export const PANELS: ActivePanel[] = ["Examples", "Input", "Output", "Console"];

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_test_component_XXXXXXXXXXXX");
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "test_component_XXXXXXXXXXXX"),
);
export const PANELS = ["Examples", "Input", "Output", "Console"];

=== test.tsx_test_component_XXXXXXXXXXXX.js === (ENTRY)
import { PANELS } from "./test";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const _hf0 = (p0) => (p0.active ? "yes" : "no");
const _hf0_str = 'p0.active?"yes":"no"';
export const test_component_XXXXXXXXXXXX = () => {
  const panelStore = useStore(() => ({
    active: "Input",
    list: PANELS,
  }));
  return /* @__PURE__ */ _jsxSorted(
    "div",
    {
      class: {
        "too-long-to-wrap": true,
        "examples-panel-input": panelStore.active === "Input",
        "examples-panel-output": panelStore.active === "Output",
        "examples-panel-console": panelStore.active === "Console",
      },
    },
    {
      stuff: _fnSignal(_hf0, [panelStore], _hf0_str),
    },
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_test_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
