crates/qwik-optimizer-oxc/tests/snapshots/special_jsx.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
// don't transpile jsx with non-plain-object props
import { jsx } from "@qwik.dev/core";

export const App = () => {
  const props = {};
  return jsx("div", props, "Hello Qwik");
};

=== test.tsx ===
// don't transpile jsx with non-plain-object props
import { jsx } from "@qwik.dev/core";
export const App = () => {
  const props = {};
  return jsx("div", props, "Hello Qwik");
};

=== DIAGNOSTICS ===

[]
